tests/spec/fail/default_param_order.aja
fuc bad(a: int = 1, b: int) -> int:
    return a + b
